welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: not found: value outcome
      	return(outcome=1)
               ^teaParty:4: error: type mismatch;
 found   : Unit
 required: Int
    	if(tea>=5 && candy>=5){
        ^teaParty:9: error: not found: value outcome
  	else{return(outcome=2)}
                    ^teaParty:10: error: not found: value outcome
  }else{return(outcome=0)}  
               ^